--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 markers =
-    admin: run the admin view test cases
+    customer: run the customer view test cases
     lawyer: run the lawyer view test cases
     bill: run the bill view test cases
     model: run the model test cases
